<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DesvEstandar">

    <EditText
        android:id="@+id/editTextAgregarNumDesv"
        android:layout_width="195dp"
        android:layout_height="54dp"
        android:layout_marginBottom="104dp"
        android:hint="@string/numeroDesvHint"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/btnAgregarNumDesv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAgregarNumDesv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/agregarDesvNumero"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcularDesv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCalcularDesv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:enabled="false"
        android:text="@string/calcularDesvBoton"
        app:layout_constraintBottom_toTopOf="@+id/textViewMostrarDesv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewMostrarDesv"
        android:layout_width="232dp"
        android:layout_height="44dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegresarDesv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewNumerosAgregadosDesv"
        android:layout_width="263dp"
        android:layout_height="42dp"
        android:layout_marginBottom="32dp"
        android:text="@string/numerosAgregadosPromedio"
        app:layout_constraintBottom_toTopOf="@+id/btnAgregarNumDesv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegresarDesv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/botonRegresarDesvEstandar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>